Drop down menu fixed on mobile responsive layout

--- a/src/components/styles/NavTopBar.css
+++ b/src/components/styles/NavTopBar.css
@@ -7,3 +7,7 @@
 #search-input:focus + #search-suggestion{
     display: block;
 }
+
+#nav-top{
+    z-index: 99999;
+}
